<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="5dp"
    android:gravity="center"
    android:weightSum="3">


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:clipToPadding="false"
        android:weightSum="2"

        >
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/cv1"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:background="@color/cardview_shadow_start_color"
            app:cardElevation="@dimen/cardview_compat_inset_shadow"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/bk1"
                    android:padding="10dp"
                    android:src="@drawable/contact" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bk1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/all_product"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/cv2"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            app:cardElevation="@dimen/cardview_compat_inset_shadow"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:background="@drawable/bk2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:src="@drawable/images"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bk2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/add_product"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:clipToPadding="false"
        android:weightSum="2"

        >
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/cv3"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            app:cardElevation="@dimen/cardview_compat_inset_shadow"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/bk3"
                    android:padding="10dp"
                    android:src="@drawable/routine" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bk3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/cart_activities"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/cv4"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            app:cardElevation="@dimen/cardview_compat_inset_shadow"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:background="@drawable/bk4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:src="@drawable/task"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bk4"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/profile"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:clipToPadding="false"
        android:weightSum="2"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/cv5"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            app:cardElevation="@dimen/cardview_compat_inset_shadow"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/bk5"
                    android:padding="10dp"
                    android:src="@drawable/share" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bk3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/share"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/cv6"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            app:cardElevation="@dimen/cardview_compat_inset_shadow"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:background="@drawable/bk6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:src="@drawable/feedback"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bk6"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/feedback"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>




</LinearLayout>